Add theme color + Replace metadata accepted nowhere with metadata accepted by Iframely

--- a/MagicPuddle.html
+++ b/MagicPuddle.html
@@ -1,14 +1,16 @@
 <!doctype html>
-<html itemscope itemtype="https://schema.org/CreativeWork">
+<html>
 <head>
 <title>Magic Puddle by Pixievolt No. 1</title>
-<meta name="description" itemprop="description" content="Relax with a procedurally-generated animation of colorful ripples.">
+<meta charset="UTF-8">
+<meta name="description" property="og:description" content="Relax with a procedurally-generated animation of colorful ripples.">
 <meta name="viewport" content="width=device-width">
 <script type="module" src="magicPuddle.js"></script>
 <link rel="stylesheet" href="stylesheet.css">
 <link rel="icon" href="appIcon.v1.svg">
 <link rel="manifest" href="app.webmanifest">
-<meta itemprop="image" content="screenshot.png">
+<meta name="theme-color" content="#000055">
+<meta property="og:image" content="screenshot.png">
 </head>
 <body>
 <div id="container">
@@ -17,7 +19,7 @@
 <div id="meta">
 	<div id="titleCard" style="visibility: hidden;">
 		<div id="titleCardText">
-			<span id="title" itemprop="name">Magic Puddle</span> by <span id="author">Pixievolt No. 1</span>
+			<span id="title">Magic Puddle</span> by <span id="author">Pixievolt No. 1</span>
 		</div>
 		<button id="optionsButton" aria-label="Options" aria-pressed="false">
 			<img src="titleCardButtons.v1.svg#menu" aria-hidden="true">
@@ -43,8 +45,8 @@
 				<a href="https://pixievoltno1.itch.io/magic-puddle/donate">Donate</a>
 				<a href="https://pixievoltno1.com/web/">More Web Wonders</a>
 				<div id="info">
-					<p>Magic Puddle <span itemprop="version">v4.0</span></p>
-					<p itemprop="author" itemscope itemtype="https://schema.org/Person">Made by <a href="https://pixievoltno1.com" itemprop="url"><span itemprop="name">Pixievolt No. 1</span></a></p>
+					<p>Magic Puddle v4.0</p>
+					<p>Made by <a href="https://pixievoltno1.com">Pixievolt No. 1</a></p>
 					<p>Font: <a href="https://www.fontsquirrel.com/fonts/Folks-Light">Folks by Manfred Klein</a></p>
 				</div>
 			</div>
