Update to Magic Puddle 4.1

--- a/MagicPuddle.html
+++ b/MagicPuddle.html
@@ -41,11 +41,11 @@
 			<div id="menu">
 				<label><input type="checkbox" id="blackBg" autocomplete="off"> Black Background</label>
 				<label><input type="checkbox" id="offline" autocomplete="off"> Make Available Offline</label>
-				<a href="https://glitch.com/edit/#!/remix/magic-puddle">Remix on Glitch</a>
-				<a href="https://pixievoltno1.itch.io/magic-puddle/donate">Donate</a>
+				<a href="https://github.com/PixievoltNo1/Magic-Puddle">Remix on GitHub</a>
+				<a id="donate" href="https://pixievoltno1.itch.io/magic-puddle/donate">Donate</a>
 				<a href="https://pixievoltno1.com/web/">More Web Wonders</a>
 				<div id="info">
-					<p>Magic Puddle v4.0</p>
+					<p>Magic Puddle v4.1</p>
 					<p>Made by <a href="https://pixievoltno1.com">Pixievolt No. 1</a></p>
 					<p>Font: <a href="https://www.fontsquirrel.com/fonts/Folks-Light">Folks by Manfred Klein</a></p>
 				</div>
